<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.MainActivity">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_checklist" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9026764" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/verticalGuidelineLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <TextView
        android:id="@+id/textViewTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/main_title"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="@+id/imageViewIcon"
        app:layout_constraintStart_toStartOf="@+id/imageViewIcon"
        app:layout_constraintTop_toBottomOf="@+id/imageViewIcon" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimaryDark"
        android:text="@string/main_login"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/main_email"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/main_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

    <ImageView
        android:id="@+id/imageViewInstagram"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageViewTwitter"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewFacebook"
        app:srcCompat="@drawable/ic_instagram" />

    <ImageView
        android:id="@+id/imageViewFacebook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewInstagram"
        app:layout_constraintEnd_toStartOf="@+id/imageViewInstagram"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/verticalGuidelineLeft"
        app:srcCompat="@drawable/ic_facebook" />

    <ImageView
        android:id="@+id/imageViewTwitter"
        android:layout_width="30dp"
        android:layout_height="30dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageViewInstagram"
        app:layout_constraintEnd_toStartOf="@+id/verticalGuidelineRight"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imageViewInstagram"
        app:srcCompat="@drawable/ic_twitter" />
</androidx.constraintlayout.widget.ConstraintLayout>